--- a/demo/demo_notebook.ipynb
+++ b/demo/demo_notebook.ipynb
@@ -42,15 +42,18 @@
     "import sys\n",
     "import torch\n",
     "sys.path.append('..')\n",
-    "from src import nns\n",
-    "from src import embedders\n",
-    "from src import segmodel\n",
     "from src import defdevice\n",
-    "from demo_functions import run_image, run_video\n",
     "\n",
     "# If you have a cuda device, specify in the force_device function\n",
     "if torch.cuda.is_available():\n",
-    "    defdevice.force_device('cuda:0')"
+    "    defdevice.force_device('cuda:0')\n",
+    "else:\n",
+    "    defdevice.force_cpu('cpu')\n",
+    "\n",
+    "from src import nns\n",
+    "from src import embedders\n",
+    "from src import segmodel\n",
+    "from demo.demo_functions import run_image, run_video"
    ]
   },
   {
