--- a/demo/demo_notebook.ipynb
+++ b/demo/demo_notebook.ipynb
@@ -168,17 +168,17 @@
     "model.load(\"../weights/CSTableModel\") # Specify the weights you want to load\n",
     "smodel = segmodel.CSModel(image_embr, text_embr, model)\n",
     "\n",
-    "labels = [ 'Mountain', 'Grass', 'Moss', 'Rock', 'Other'] # Labels to look for.\n",
+    "labels = ['Mountain', 'Grass', 'Moss', 'Rock', 'Other'] # Labels to look for.\n",
     "\n",
     "path = '../FP/Vid1.mp4' # Video path.\n",
-    "width, height = (468, 256)\n",
-    "output_path = '../FP/generated_video.mp4'\n",
+    "width, height = (1920, 1080)\n",
+    "output_path = 'segmented_video.mp4'\n",
     "fps = 30\n",
     "frame_count = 50000 # Maximum amount of frames to segment.\n",
     "frame_average = 5 # How many frames to average segmentation over.\n",
-    "draw_period = 300 # How frequently to output example segmentations.\n",
     "\n",
-    "run_video(path, smodel, labels, width, height, output_path, fps, frame_count, frame_average, draw_period, web = False)"
+    "# Run the segmentation, see the legend and the video in the demo folder\n",
+    "run_video(path, smodel, labels, width, height, output_path, fps, frame_count, frame_average, web = False)"
    ]
   }
  ],
